# 22s-pa02-thefontenauts

./: CMakeLists.txt  DataGenerator.js  README.md  main.cpp
data/: AllData.xlsx  CombinedMean.csv  FinalData.csv  RyanDataRun1.csv  RyanDataRun2.csv  RyanDataRun3.csv  RyanMean.csv  WesDataRun1.csv  WesDataRun1UpdatedHeap.csv  WesDataRun2.csv  WesDataRun2UpdatedHeap.csv.csv  WesDataRun3.csv  WesDataRun3UpdatedHeap.csv  WesMean.csv  graphAnalysis.Rmd  sorting.csv  sorting2.csv
input/: int-20duplicates-10.txt  int-20duplicates-10000.txt  int-20duplicates-100000.txt  int-20duplicates-5.txt  int-20duplicates-5000.txt  int-20duplicates-50000.txt  int-20duplicates-500000.txt  int-40duplicates-10.txt  int-40duplicates-10000.txt  int-40duplicates-100000.txt  int-40duplicates-5000.txt  int-40duplicates-50000.txt  int-40duplicates-500000.txt  int-60sorted-10000.txt  int-60sorted-100000.txt  int-60sorted-5000.txt  int-60sorted-50000.txt  int-60sorted-500000.txt  int-noDuplicates-10.txt  int-noDuplicates-10000.txt  int-noDuplicates-100000.txt  int-noDuplicates-5000.txt  int-noDuplicates-50000.txt  int-noDuplicates-500000.txt  int-sorted-5000.txt  int-sorted-50000.txt  int-sorted-500000.txt  string-20duplicates-10.txt  string-20duplicates-10000.txt  string-20duplicates-100000.txt  string-20duplicates-5.txt  string-20duplicates-5000.txt  string-20duplicates-50000.txt  string-20duplicates-500000.txt  string-40duplicates-10.txt  string-40duplicates-10000.txt  string-40duplicates-100000.txt  string-40duplicates-5.txt  string-40duplicates-5000.txt  string-40duplicates-50000.txt  (+22 more)
(+6 files in other folders)
